# vim: set noexpandtab:

2012-09-03 Matt
	* Added 4 Met Sys to SusyDefs
	
2012-09-03 Steve
	* Update trigger thresholds to match those of the 2-lep group

2012-08-30 Matt
	* Removed previous electron scale sys and replaced with 4 new shifts.	
	* Modified Sys enums in SusyDefs

2012-08-28 Steve
	* Add matchTruth flag to jets
	* Add boolean arguments to lepton IP methods to toggle usage of unbiased variables
		* Current biased values are still the default
	* Add variables to Tau: nTrack, author, eleBDT, jetBDT
	* Tagging SusyNtuple-00-00-24

2012-08-26 Steve
	* Added event weight functions for A-B3, A-B
	* Default event weight now uses A-D7 lumi and pileup weights
	* Tagging SusyNtuple-00-00-23

2012-08-21 Steve
	* Fixing global variable LUMI_A_B14: 5381 -> 5835 [1/pb]
		* I double checked the lumi calculation with lumi-calc
		  here: https://atlas-lumicalc.cern.ch/results/717050/result.html

2012-08-17 Steve
	* Updated to MultiLep-01-02-04 and SUSYTools-00-01-04
	* Tagging SusyNtuple-00-00-22

2012-08-13 Steve
	* Add flags for toggling signal lepton cuts for simple optimization studies

2012-08-10 Anyes
	* Update BTag MV1 weights to the lastest values for 2012 (85%:0.122 60%:0.98)
	  from here: https://twiki.cern.ch/twiki/bin/viewauth/AtlasProtected/BtagAnalysis172#LC_Jets
	
2012-08-09 Anyes
	* Add BTagCalib code & function in SusyNtTools to get the weight.
	* Some update to TGuiUtils

2012-08-08 Steve
	* Updated e-mu overlap removal to remove all possible pairings with each lepton
	* Also updated mu-mu overlap removal in the same way
	* Tagging SusyNtuple-00-00-21
	* Also updated e-e overlap removal in the same way (after the tag)

2012-08-07 Steve
	* Changed default btag WP to MV1 @ 85%
	* Keeping taus separate from the lepton vector.
		* Still indecisive about how to organize it exactly

2012-08-01 Steve
	* Added streamer for vector<Tau>
		* Somehow it was able to write out the taus fine without this???  WTF??
	* Tagging SusyNtuple-00-00-20

2012-07-31 Steve